support other version of jdk